docs/grammar.txt
# === PROGRAM ENTRY ===
program                 ::= global_statement_list [ TOK_EOF ]

# === LISTS ===
global_statement_list   ::= global_statement { global_statement }
local_statement_list    ::= local_statement { local_statement }
op_local_statement_list ::= local_statement_list | ε
comparison_list         ::= comparison_pair { comparison_pair }

# === STATEMENTS ===
global_statement        ::= function_def | var_def | if_stmt
local_statement         ::= var_def | return_stmt | if_stmt

# === VARIABLE DECLARATION ===
var_def                 ::= TOK_VAR TOK_ID variable_type TOK_ASSIGN logical_or
variable_type           ::= explicit_type | implicit_type
explicit_type           ::= TOK_COLON type_definition
implicit_type           ::= ε

# === FUNCTION DEFINITION ===
function_def            ::= TOK_FUNCTION TOK_ID TOK_L_PAREN parameters_list TOK_R_PAREN TOK_ARROW return_type_definition body_def
parameters_list         ::= [ parameter { TOK_COMMA parameter } ] | ε
parameter               ::= TOK_ID TOK_COLON type_definition
body_def                ::= TOK_L_BRACE op_local_statement_list TOK_R_BRACE
return_stmt             ::= TOK_RETURN [ logical_or ]

# === CONTROL FLOW ===
if_stmt                 ::= TOK_IF TOK_L_PAREN logical_or TOK_R_PAREN body_def elif_blocks else_opt
elif_blocks             ::= { TOK_ELIF TOK_L_PAREN logical_or TOK_R_PAREN body_def }
else_opt                ::= TOK_ELSE body_def | ε

# === TYPES ===
type_definition         ::= TOK_TYPE_INT | TOK_TYPE_STRING | TOK_TYPE_FLOAT | TOK_TYPE_BOOL | TOK_TYPE_LIST
return_type_definition  ::= type_definition | TOK_TYPE_VOID

# === EXPRESSIONS & LOGIC ===
logical_or              ::= logical_and { TOK_OR logical_or }
logical_and             ::= logical_not { TOK_AND logical_and }
logical_not             ::= TOK_NOT logical_not | comparison

comparison              ::= arithmetic comparison_list | arithmetic
comparison_pair         ::= TOK_COMP_OP arithmetic

arithmetic              ::= arithmetic TOK_MATH_OP arithmetic | expr_value

expr_value              ::= factor | string_literal | bool_literal | TOK_ID
factor                  ::= TOK_NUMBER
string_literal          ::= TOK_STRING
bool_literal            ::= TOK_TRUE | TOK_FALSE
